compiler/tests/fixtures/invalid/semantics/query_conflicting_operators.viv
// Query with conflicting numeric criteria: == combined with >= — should be rejected

action test-act:
    roles:
        @actor:
            as: initiator


query bad-criteria:
    importance:
        ==: 5
        >=: 3
